# audio-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile.triton  LICENSE  README.md  README_HF.md  TZ_audio_rag.md  app.py  docker-compose.yml  inspect_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements-triton.txt  requirements_hf.txt  sitecustomize.py
audio_rag/: __init__.py  base_reranker.py  chunking.py  cli.py  config.py  embeddings.py  factories.py  llm.py  models.py  reranker.py  service.py  settings.py  store.py  triton_client.py  triton_reranker.py
audio_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
audio_rag/embedders/: __init__.py  base.py  bge.py  hashing.py  triton_bge.py
audio_rag/stores/: __init__.py  base.py  jsonl_store.py  qdrant_store.py
audio_rag/utils/: __init__.py  logging.py
conf/: config.yaml  config_hf.yaml
examples/: sample_podcast.transcript.txt  sample_question.question.txt  sample_transcript.txt
model_repo/asr_whisper/: config.pbtxt
model_repo/asr_whisper/1/: model.py
model_repo/bge_embedder/: config.pbtxt
model_repo/bge_embedder/1/: model.py
model_repo/ingest_bls/: config.pbtxt
model_repo/ingest_bls/1/: model.py
model_repo/llm_qwen/: config.pbtxt
model_repo/llm_qwen/1/: model.py
model_repo/query_bls/: config.pbtxt
model_repo/query_bls/1/: model.py
model_repo/reranker/: config.pbtxt
model_repo/reranker/1/: model.py
scripts/: deploy_hf.py  deploy_hf.sh
tests/: test_audio_workflow.py  test_mvp.py  test_triton_client.py  Вопрос.m4a  Подкаст.m4a
