[project]
name = "audio-rag"
version = "0.1.0"
description = "Triton-first Audio RAG prototype for podcast ingest and audio question answering"
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]
triton = [
    "numpy>=1.26,<3.0",
    "faster-whisper>=1.1,<2.0",
]

[project.scripts]
audio-rag = "audio_rag.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["audio_rag"]
